Reorganizacion de rutas con botones y audio incluidos

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-maps": "^9.4.5",
     "react-moment": "^0.9.6",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.1.2",
