--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "boscheck",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://lauramayar.github.io/Boscheck/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "gh-pages": "^2.1.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
